K8S/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: weather-app

spec:
  replicas: 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: weather-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: sror/weather-app-backend:latest

        ports:
        - containerPort: 3000

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: sror/weather-app-backend:latest

        ports:
        - containerPort: 3000
