K8S/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: weather-app

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 5173

  type: NodePort
