K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: weather-ingress
  namespace: weather-app

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:

  - http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
